# scrapy-calyprium

./: .releaserc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
.github/workflows/: publish.yml
src/scrapy_calyprium/: __init__.py  _config.py
src/scrapy_calyprium/extensions/: __init__.py  prism_checkpoint.py  request_tracer.py  run_stats.py
src/scrapy_calyprium/middleware/: __init__.py  mimic.py  spectre.py  stealth_fetch.py  veil.py
src/scrapy_calyprium/pipelines/: __init__.py  recrawl.py  s3_batch.py  targets.py
src/scrapy_calyprium/routing/: __init__.py  auto.py  block_detect.py  domain_cache.py  local_fetch.py  slot_stats.py  solve_client.py
src/scrapy_calyprium/spiders/: __init__.py  prism_sitemap.py
src/scrapy_calyprium/storage/: __init__.py  forge.py
tests/: test_block_detect.py  test_egress_ip_feedback.py  test_local_fetch.py  test_local_routing.py  test_middleware_local_integration.py  test_pool_refill.py  test_proactive_refill.py  test_rate_cap.py  test_run_stats_extension.py  test_slot_stats_reporter.py  test_targets_refill.py
